基础数据管理修改版
跳页方式改为弹框，规整了代码。

--- a/GMS.Web.Admin/GMS.Web.Admin.csproj
+++ b/GMS.Web.Admin/GMS.Web.Admin.csproj
@@ -1577,6 +1577,7 @@
     <Content Include="FileUpload.ashx" />
     <None Include="Properties\PublishProfiles\gms.pubxml" />
     <Content Include="Views\Shared\_Layout.supplier.cshtml" />
+    <Content Include="Views\Shared\_Content.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GMS.Account.BLL\GMS.Account.BLL.csproj">
